Fixed header media wrap issue

--- a/static_files/assets/scss/components/_media-header.scss
+++ b/static_files/assets/scss/components/_media-header.scss
@@ -4,16 +4,20 @@
 }
 
 .header-media-wrap {
-  bottom: 0;
+  bottom: 575px;
   left: 0;
   position: absolute;
   right: 0;
   top: 0;
   z-index: 1;
+
+  @media (min-width: 575px) {
+    bottom: 500px;
+  }
 }
 
 .media-background-container {
-  height: 575px;
+  height: 550px;
   width: 100%;
 
   @media (min-width: 575px) {
